--- a/alpha-clip/index.html
+++ b/alpha-clip/index.html
@@ -6,7 +6,7 @@
         content="Alpha-CLIP: A CLIP Model Focusing on Wherever You Want">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nerfies: Deformable Neural Radiance Fields</title>
+  <title>Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
