--- a/alpha-clip/index.html
+++ b/alpha-clip/index.html
@@ -250,7 +250,8 @@
           <div class="column is-full-width">
             <div class="content has-text-justified">
               <p>
-			  这里换成表格，or可以加一个cls测试pipeline； 以及rec任务 <br>
+			  这里换成表格，or可以加一个cls测试pipeline； 以及rec任务 
+			  <br>
                 We delineate the process of utilizing the seed captions to train a general captioner (Share-Captioner)
                 and then employing this captioner to generate <b>1.2M high-quality captions</b> for pre-training usage.
                 <centering>
