--- a/alpha-clip/index.html
+++ b/alpha-clip/index.html
@@ -139,8 +139,11 @@
               <!-- PDF Link. -->
               <span class="link-block"> <a href="https://arxiv.org/abs/2011.12948"
                    class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="ai ai-arxiv"></i> </span> <span>arXiv</span> </a> </span>
-              <!-- Code Link.
-              <span class="link-block"> <a href="https://github.com/SunzeY/AlphaCLIP"
+              <!-- Video Link. -->
+              <!-- <span class="link-block"> <a href="https://www.youtube.com/watch?v=UAUJNFJSbiI"
+                   class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="fab fa-youtube"></i> </span> <span>Video</span> </a> </span> -->
+              <!-- Code Link. -->
+              <span class="link-block"> <a href="https://github.com/google/nerfies"
                    class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="fab fa-github"></i> </span> <span>Code</span> </a> </span>
               <!-- Dataset Link. -->
               <span class="link-block"> <a href="https://huggingface.co/spaces/Zery/Alpha_CLIP_ImgVar"
