--- a/alpha-clip/index.html
+++ b/alpha-clip/index.html
@@ -140,7 +140,7 @@
               <span class="link-block"> <a href="https://arxiv.org/abs/2011.12948"
                    class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="ai ai-arxiv"></i> </span> <span>arXiv</span> </a> </span>
               <!-- Code Link. -->
-              <span class="link-block"> <a href="https://github.com/google/nerfies"
+              <span class="link-block"> <a href="https://github.com/SunzeY/AlphaCLIP"
                    class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="fab fa-github"></i> </span> <span>Code</span> </a> </span>
               <!-- Dataset Link. -->
               <span class="link-block"> <a href="https://huggingface.co/spaces/Zery/Alpha_CLIP_ImgVar"
