--- a/alpha-clip/index.html
+++ b/alpha-clip/index.html
@@ -137,7 +137,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block"> <a href="https://arxiv.org/abs/2011.12948"
+              <span class="link-block"> <a href="https://arxiv.org/abs/2312.03818"
                    class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="ai ai-arxiv"></i> </span> <span>arXiv</span> </a> </span>
               <!-- Code Link. -->
               <span class="link-block"> <a href="https://github.com/SunzeY/AlphaCLIP"
@@ -552,7 +552,7 @@ in red. This visualization verifies that Alpha-CLIP <b>pays more attention to th
             title={Alpha-CLIP: A CLIP Model Focusing on Wherever You Want}, 
             author={Zeyi Sun and Ye Fang and Tong Wu and Pan Zhang and Yuhang Zang and Shu Kong and Yuanjun Xiong and Dahua Lin and Jiaqi Wang},
             year={2023},
-            eprint={?},
+            eprint={2312.03818},
             archivePrefix={arXiv},
             primaryClass={cs.CV}
           }
