--- a/alpha-clip/index.html
+++ b/alpha-clip/index.html
@@ -128,12 +128,12 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title"><img id="logo" width="5%" src="static/images/icon.png"> <span class="rainbow-text">Alpha-CLIP</span>: A CLIP Model Focusing on Wherever You Want</h1>
-          <div class="is-size-5 publication-authors"> <span class="author-block"> <a href="https://github.com/SunzeY">Zeyi Sun</a><sup>*1,4</sup>,</span> <span class="author-block"> <a href="https://github.com/Aleafy">Ye Fang</a><sup>*2,4</sup>,</span> <span class="author-block"> <a href="https://wutong16.github.io/">Tong Wu</a><sup>3,4</sup>, </span> <span class="author-block"> <a href="https://panzhang0212.github.io/">Pan Zhang</a><sup>4</sup>, </span> <span class="author-block"> <a href="https://yuhangzang.github.io/">Yuhang Zang</a><sup>4</sup>, </div> <div class="is-size-5 publication-authors"> </span> <span class="author-block"> <a href="https://aimerykong.github.io/">Shu Kong</a><sup>5</sup>, </span> <span class="author-block"> <a href="http://yjxiong.me/">Yuanjun Xiong</a><sup>1,6</sup>, </span> <span class="author-block"> <a href="http://dahua.site/">Dahua Lin</a><sup>3,4</sup>, </span> <span class="author-block"> <a href="https://myownskyw7.github.io/">Jiaqi Wang</a><sup>&dagger;4</sup> </span> </div>
+          <div class="is-size-5 publication-authors"> <span class="author-block"> <a href="https://github.com/SunzeY">Zeyi Sun</a><sup>*1,4</sup>,</span> <span class="author-block"> <a href="https://github.com/Aleafy">Ye Fang</a><sup>*2,4</sup>,</span> <span class="author-block"> <a href="https://wutong16.github.io/">Tong Wu</a><sup>3,4</sup>, </span> <span class="author-block"> <a href="https://panzhang0212.github.io/">Pan Zhang</a><sup>4</sup>, </span> <span class="author-block"> <a href="https://yuhangzang.github.io/">Yuhang Zang</a><sup>4</sup>, </div> <div class="is-size-5 publication-authors"> <span class="author-block"> <a href="https://aimerykong.github.io/">Shu Kong</a><sup>5</sup>, </span> <span class="author-block"> <a href="http://yjxiong.me/">Yuanjun Xiong</a><sup>1,6</sup>, </span> <span class="author-block"> <a href="http://dahua.site/">Dahua Lin</a><sup>3,4</sup>, </span> <span class="author-block"> <a href="https://myownskyw7.github.io/">Jiaqi Wang</a><sup>&dagger;4</sup> </span> </div>
           <div class="is-size-5 publication-authors"> <span class="author-block"><sup>1</sup>Shanghai Jiao Tong University,</span> <span class="author-block"><sup>2</sup>Fudan University,</span>  <span class="author-block"><sup>3</sup>The Chinese University of Hong Kong,</span><br> <span class="author-block"><sup>4</sup>Shanghai AI Laboratory,</span>
               <span class="author-block"><sup>5</sup>University of Macau,</span> <span class="author-block"><sup>6</sup>MThreads, Inc.</span> </div>
 		  <div class="is-size-6 publication-authors">
               <span class="author-block"><sup>*</sup>Equally contributing first authors. <sup>&dagger;</sup>Corresponding authors.</span>
-            </div>
+          </div>
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
@@ -142,11 +142,15 @@
               <!-- Code Link. -->
               <span class="link-block"> <a href="https://github.com/google/nerfies"
                    class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="fab fa-github"></i> </span> <span>Code</span> </a> </span>
-              <!-- Dataset Link. -->
+			  <!-- LLM Demo Link. -->
+			  <span class="link-block"> <a href="https://huggingface.co/spaces/Zery/Alpha-CLIP_LLaVA-1.5"
+                   class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="far fa-images"></i> </span> <span>Alpha-CLIP+LLM Demo</span></a></span>	
+              <!-- Image Demo Link. -->
               <span class="link-block"> <a href="https://huggingface.co/spaces/Zery/Alpha_CLIP_ImgVar"
-                   class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="far fa-images"></i> </span> <span>Demo</span></a></span></div>
-          	 </div>
-       	   </div>
+                   class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="far fa-images"></i> </span> <span>Alpha-CLIP+ImgVar Demo</span></a></span>
+			</div>
+       	  </div>
+   	    </div>
         </div>
   </div>
 
@@ -560,6 +564,8 @@ in red. This visualization verifies that Alpha-CLIP <b>pays more attention to th
       </div>
     </section>
 
+
+
 <footer class="footer">
   <div class="container">
   	<!-- link
@@ -584,6 +590,9 @@ in red. This visualization verifies that Alpha-CLIP <b>pays more attention to th
           <p>
             Thanks to <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a> and <a href="https://jerryxu.net/GroupViT">GroupViT</a>.
           </p>
+		  <div style="width: 30%; text-align: center;">
+              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=wNuAXemSTme55IF9obP1FzKoxfAcqTbRtJTs76zZJiQ&cl=ffffff&w=a"></script>
+          </div>
         </div>
       </div>
     </div>
