--- a/alpha-clip/index.html
+++ b/alpha-clip/index.html
@@ -143,8 +143,11 @@
               <span class="link-block"> <a href="https://github.com/SunzeY/AlphaCLIP"
                    class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="fab fa-github"></i> </span> <span>Code</span> </a> </span>
               <!-- Dataset Link. -->
+              <span class="link-block"> <a href="https://huggingface.co/spaces/Zery/Alpha-CLIP_LLaVA-1.5"
+                   class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="far fa-images"></i> </span> <span>Alpha-CLIP+LLM Demo</span></a></span>
+			  <!-- Dataset Link. -->
               <span class="link-block"> <a href="https://huggingface.co/spaces/Zery/Alpha_CLIP_ImgVar"
-                   class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="far fa-images"></i> </span> <span>Demo</span></a></span></div>
+                   class="external-link button is-normal is-rounded is-dark"> <span class="icon"> <i class="far fa-images"></i> </span> <span>Alpha-CLIP+ImgVar Demo</span></a></span></div>
           	 </div>
        	   </div>
         </div>
@@ -584,6 +587,9 @@ in red. This visualization verifies that Alpha-CLIP <b>pays more attention to th
           <p>
             Thanks to <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a> and <a href="https://jerryxu.net/GroupViT">GroupViT</a>.
           </p>
+        </div>
+		<div style="width: 30%; text-align: center;">
+              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=wNuAXemSTme55IF9obP1FzKoxfAcqTbRtJTs76zZJiQ&cl=ffffff&w=a"></script>
         </div>
       </div>
     </div>
