--- a/relightvid/index.html
+++ b/relightvid/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
+  <link rel="icon" href="static\gifs\icon.png" type="image/png">
 
   <!-- Owl Carousel CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -790,7 +791,7 @@
       
         <b>LightAtlas data pipeline overview.</b> Our custom augmentation pipeline generates high-quality video relighting pairs from
         both in-the-wild videos and 3D-rendered data. <span style="color: #DAA520;">Left</span> side extracts five types of augmented data
-        from the original video using <span style="color: #DAA520;">n>in-the-wild sources</span>. 
+        from the original video using <span style="color: #DAA520;">in-the-wild sources</span>. 
         <span style="color: #1E90FF;">Right</span> side shows <span style="color: #1E90FF;">3D-rendered video pairs</span> 
         generated under varying HDR maps and random camera trajectories, enhancing both diversity and realism of relighting data.
       
