--- a/relightvid/index.html
+++ b/relightvid/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-  <link rel="icon" href="static\gifs\icon.png" type="image/png">
+  <link rel="icon" href="static\gifs\icon6.png" type="image/png">
 
   <!-- Owl Carousel CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -196,7 +196,7 @@
       margin: 0;
     }
     .main-container {
-      max-width: 1560px;         /* 控制内容区宽度，数值可以根据需求调整 */
+      max-width: 1600px;         /* 控制内容区宽度，数值可以根据需求调整 */
       margin: 2em auto;         /* 上下左右外边距，形成白边 */
       padding: 1.5em;           /* 内容区内边距，让内部不贴边 */
       background: white;        /* 白色背景让展示区域醒目 */
@@ -356,7 +356,7 @@
   <div class="main-container">
   <!-- Hero section with title and description -->
   <div class="hero">
-    <h1>RelightVid: Temporal-Consistent Diffusion Model for Video Relighting <br></h1>
+    <h1><img src="static\gifs\icon6.png" alt="icon" style="width:45px;height:45px;vertical-align:-5px;"> RelightVid: Temporal-Consistent Diffusion Model for Video Relighting <br></h1>
 
     <br><br>
     <div class="publication-authors">
